// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommandBarButtonsMenu renders CommandBarButtonsMenu 1`] = `
<CustomizedCommandBarButton
  ariaLabel="More items"
  className="commandBarButtonsMenu"
  componentRef={Object {}}
  menuIconProps={
    Object {
      "className": "commandBarButtonsMenuButton",
      "iconName": "More",
    }
  }
  menuProps={
    Object {
      "className": "commandBarButtonsSubmenu",
      "items": Array [
        Object {
          "key": "export report",
          "onRender": [Function],
        },
        Object {
          "key": "save assessment",
          "onRender": [Function],
        },
        Object {
          "key": "load assessment",
          "onRender": [Function],
        },
        Object {
          "key": "start over",
        },
      ],
    }
  }
  role="button"
/>
`;

exports[`CommandBarButtonsMenu renders all child buttons,: render export report menuitem 1`] = `
<div
  role="menuitem"
>
  <React.Fragment>
    Report export button
  </React.Fragment>
</div>
`;

exports[`CommandBarButtonsMenu renders all child buttons,: render load assessment menuitem 1`] = `
<div
  role="menuitem"
>
  <React.Fragment>
    Load assessment button
  </React.Fragment>
</div>
`;

exports[`CommandBarButtonsMenu renders all child buttons,: render save assessment menuitem 1`] = `
<div
  role="menuitem"
>
  <React.Fragment>
    Save assessment button
  </React.Fragment>
</div>
`;

exports[`CommandBarButtonsMenu renders all child buttons,: render start over menuitem 1`] = `
<React.Fragment>
  Start over button
</React.Fragment>
`;
